# lgrep

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  WORKLOG.md
.github.bak/workflows/: release.yml
.github/instructions/: lgrep.instructions.md
src/: cache.rs  cli.rs  config.rs  filters.rs  hybrid.rs  lib.rs  main.rs  output.rs  utils.rs
src/embedding/: chunker.rs  mod.rs  provider.rs  storage.rs
src/indexer/: index.rs  scanner.rs  watch.rs
src/install/: claude_code.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
src/parser/: languages.rs  symbols.rs
src/query/: agent.rs  callers.rs  changed_files.rs  definition.rs  dependents.rs  index_filter.rs  mod.rs  references.rs  search.rs  symbols.rs
tests/: cli_simplification.rs  index_embeddings.rs  p1_agent_efficiency.rs  search_output_budget.rs
