[package]
name = "lgrep"
version = "0.1.0"
edition = "2021"
description = "Local semantic code search tool with AST and BM25 support"
license = "MIT"
authors = ["lgrep contributors"]
keywords = ["search", "code", "ast", "grep"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "lgrep"
path = "src/lib.rs"

[[bin]]
name = "lgrep"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "color"] }

# Search engine (BM25)
tantivy = "0.22"

# AST parsing
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"

# File scanning
ignore = "0.4"
walkdir = "2.5"

# Parallelism
rayon = "1.10"

# Data structures
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async (for watch mode)
tokio = { version = "1", features = ["full"] }
notify = "7"

# Utilities
anyhow = "1"
thiserror = "2"
once_cell = "1"
regex = "1"
colored = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
