# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "cgrep"
version = "1.0.0"
edition = "2021"
description = "cgrep (codegrep) - Local semantic code search tool for AI agents with AST and BM25 support"
license = "MIT OR Apache-2.0"
authors = ["cgrep contributors"]
repository = "https://github.com/meghendra6/cgrep"
homepage = "https://github.com/meghendra6/cgrep"
readme = "README.md"
keywords = ["search", "code", "ast", "grep"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "cgrep"
path = "src/lib.rs"

[[bin]]
name = "cgrep"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"

# Search engine (BM25)
tantivy = "0.22"

# AST parsing
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"

# File scanning
ignore = "0.4"
walkdir = "2.5"

# Parallelism
rayon = "1.10"

# Data structures
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

# Embedding storage
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
dirs = "5"

# Async (for watch mode)
tokio = { version = "1", features = ["full"] }
notify = "7"

# Utilities
anyhow = "1"
thiserror = "2"
once_cell = "1"
regex = "1"
colored = "2"
indicatif = { version = "0.17", features = ["rayon"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
